--- a/projects.css
+++ b/projects.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap');
+
 
 .first-name{
   font-family: 'Roboto Slab', serif;
   font-size: 72px;
   color: #000080;
-  margin-left: 270px;
+  margin-left: 21.25%;
+  /* margin-left: 270px; */
   margin-right: 765px;
 }
 
@@ -14,42 +15,34 @@
   font-family: 'Roboto Slab', serif;
   font-size: 72px;
   color: #800000;
-  margin-left: 494px;
+  margin-left: 38.5%;
+  /* margin-left: 494px; */
   margin-top: -169px;
-  margin-right: 800px;
+  /* margin-right: 800px; */
 }
 
-.profile-image{
-  height: 240px;
-  width: 240px;
-  background-color: #bbb;
-  border-radius: 50%;
-  margin-left: 750px;
-  margin-top: -200px;
+.list-item-name{
+  font-family: 'Roboto Slab', serif;
+  font-size: 72px;
+  color: #000000;
+  margin-left: 56.5%;
+  /* margin-left: 494px; */
+  margin-top: -13.1%;
+  /* margin-right: 800px; */
 }
 
 .navigation-bar{
   height: 35px;
   width: 420px;
-  margin-left: 278px;
-  margin-top: -110px;
-}
-
-.page-title {
-  font-family: 'Roboto Slab';
-  font-size: 30px;
-  margin-left: 260px;
-  margin-top: 75px;
-}
-
-.text{
-  font-family: 'Source Code Pro', monospace;
-  margin-left: 260px;
+  margin-left: 21.75%;
+  /* margin-left: 278px; */
+  margin-top: -5%;
 }
 
 ul{
   font-family: 'Poppins', sans-serif;
   font-size: 20px;
+
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -74,4 +67,8 @@ a {
 
 a:hover{
   opacity: 0.7;
+}
+
+body {
+  background-color: white;
 }
