--- a/blog.css
+++ b/blog.css
@@ -52,7 +52,7 @@
 
 .blog-text{
   font-family: 'Source Code Pro', monospace;
-  font-family: 14px;
+  font-size: 14px;
   margin-left: 21.25%;
   /* margin-left: 260px; */
   text-align: left;
@@ -60,8 +60,8 @@
 
 .blog-box{
   background-color: white;
-  border-radius: 11px;
-  border: 2px solid whitesmoke;
+  /* border-radius: 11px; */
+  border: 2px solid lightgrey;
   height: 3.65em;
 }
 
@@ -96,11 +96,26 @@
   margin-top: 2.5em;
 }
 
+.blog-title-2{
+  font-family: 'Roboto Slab', serif;
+  font-size: 24px;
+  text-align: left;
+  margin-left: 21.25%;
+}
+
 .blog-date{
   font-family: 'Poppins', sans-serif;
   font-size: 12.5px;
   text-align: right;
   margin-right: 15px;
+  margin-top: -20px;
+  font-style: italic;
+}
+
+.blog-date-2{
+  font-family: 'Poppins', sans-serif;
+  font-size: 12.5px;
+  margin-left: 21.25%;
   margin-top: -20px;
   font-style: italic;
 }
@@ -175,4 +190,14 @@ button{
 
 button:hover{
   background-color: #f8f8ff;
+}
+
+img{
+  height: 10em;
+  width: 20em;
+}
+
+hr{
+  margin-top: 5px;
+  margin-left: 8px;
 }
