--- a/projects.css
+++ b/projects.css
@@ -66,12 +66,23 @@
 }
 
 .image-box{
-  background-color: white;
+  /* background-color: white;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border: 1px solid black;
   height: 12em;
   margin-top: 0.25em;
+  margin-left: 0.25em;
+  margin-right: 0.25em; */
+}
+
+img{
+  background-color: white;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  height: 150px;
+  width: 240px;
+  margin-top: 0.35em;
   margin-left: 0.25em;
   margin-right: 0.25em;
 }
